fix(FrameworkConfigurationForm): truncate labels instead of overflowing
Long labels were allowed to flow outside of <fieldset>s because most browsers set a useragent style on <fieldset> like  min-width: min-content

Closes DCOS-42157

--- a/src/styles/components/framework-configuration/styles.less
+++ b/src/styles/components/framework-configuration/styles.less
@@ -1,6 +1,7 @@
 .framework-configuration-form fieldset {
   border: 0;
   margin: 0;
+  min-width: 0;
   padding: 0;
 
   .error-detail {
